<?xml version="1.0" encoding="utf-8"?>
<!--Question activity -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlb"
    tools:context=".questions.Question7">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="443dp"
        android:text="@string/which_is_not_a_country_in_africa"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q7Worth" />

    <Button
        android:id="@+id/q7a1B"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/vero_azul"
        app:layout_constraintBottom_toTopOf="@+id/q7a2B"
        app:layout_constraintEnd_toEndOf="@+id/q7a2B"
        app:layout_constraintStart_toStartOf="@+id/q7a2B"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/q7a2B"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/mauritius"
        app:layout_constraintBottom_toTopOf="@+id/q7a3B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q7a1B" />

    <Button
        android:id="@+id/q7a3B"
        android:layout_width="285dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/burkina_faso"
        app:layout_constraintBottom_toTopOf="@+id/q7a4B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q7a2B" />

    <Button
        android:id="@+id/q7a4B"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/cabo_verde"
        app:layout_constraintBottom_toTopOf="@+id/conf7B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q7a3B" />

    <Button
        android:id="@+id/conf7B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q7a4B" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/borderbottom"
        android:text="@string/question_worth"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="@+id/q7a1B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/q7Worth"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginStart="264dp"
        android:layout_marginLeft="264dp"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="15dp"
        android:text="@string/_0"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="34dp"
        android:text="@string/total_earned"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/q7Total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/q7Total"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:text="@string/_0"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>