<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgr"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="363dp"
        android:layout_height="121dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="74dp"
        android:gravity="center_horizontal"
        android:text="@string/who_wants_to_be_a_millionaire"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/beginB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/beginB"
        android:layout_width="227dp"
        android:layout_height="62dp"
        android:text="@string/begin_game"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ibutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/ibutton"
        android:layout_width="323dp"
        android:layout_height="68dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="327dp"
        android:background="@null"
        android:text="@string/view_instructions"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beginB"
        tools:text="View Instructions" />

</androidx.constraintlayout.widget.ConstraintLayout>